{{$NEXT}}

6.072     2024-09-05 10:22:13+02:00 Europe/Berlin

 - Fixed command 'remove-from-netspoc'.
   A service is no longer removed accidently, if only some rules of
   a service become empty, but other rules remain.
 - Message "swap objects of 'user' and objects of rules" is shown
   even if no attribute multi_owner is given.
 - Fixed check for NAT network being subnet of some other network.
   If multiple networks have dynamic NAT to same address,
   now a warning is given for each network.
 - Fixed check for useless attribute 'subnet_of'
   where supernet has attribute 'has_subnets'.

6.071     2024-07-29 16:47:58+02:00 Europe/Berlin

 - Fixed generated ACL at router R with managed=local for rule where
   - source or destination is some aggregate G,
   - G has IP address matching "filter_only" of R,
   - G has no subnetworks in its zone,
   - other side of rule is located inside managed-local cluster of R.
   Previously no ACL was generated for this rule at R.
   This has been fixed.
 - Added new check for unexpected access from supernet rule at router
   with 'managed=local':
   1. Checks rule where
   - source or destination is some supernet,
   - this supernet is located inside some managed=local cluster
   - and other side of rule is outside of managed=local cluster.
   In this case, the rule would not be filtered inside managed=local cluster
   and hence access from/to subnets in same cluster
   would be allowed by accident.
   2. Checks path of rule at router with managed=local where
   - both sides of rule are located outside of managed=local cluster,
   - source or destination is some supernet,
   - subnet of this supernet is located in managed=local cluster,
   In this case, the rule would not be filtered inside managed=local cluster
   and hence access from/to subnets in same cluster
   would be allowed by accident.

6.070     2024-06-26 15:33:44+02:00 Europe/Berlin

 -  Fixed mixed managed=local/managed in VRFs of one device.